--- a/index-1.html
+++ b/index-1.html
@@ -18,6 +18,7 @@
             id="fname"
             name="firstname"
             placeholder="Your name.."
+            required
           />
   
           <label for="lname">Last Name</label>
@@ -26,10 +27,11 @@
             id="lname"
             name="lastname"
             placeholder="Your last name.."
+            required
           />
   
           <label for="email">Email</label>
-          <input type="text" id="email" name="email" placeholder="Your email.." />
+          <input type="text" id="email" name="email" placeholder="Your email.." required/>
   
           <label for="phone">Phone</label>
           <input
@@ -37,6 +39,7 @@
             id="phone"
             name="phone"
             placeholder="Your phone number.."
+            required
           />
   
           <label for="subject">Subject</label>
@@ -61,6 +64,7 @@
           id="fname"
           name="firstname"
           placeholder="Your name.."
+          required
         />
 
         <label for="lname">Last Name</label>
@@ -69,10 +73,11 @@
           id="lname"
           name="lastname"
           placeholder="Your last name.."
+          required
         />
 
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="Your email.." />
+        <input type="text" id="email" name="email" placeholder="Your email.." required/>
 
         <label for="phone">Phone</label>
         <input
@@ -80,6 +85,7 @@
           id="phone"
           name="phone"
           placeholder="Your phone number.."
+          required
         />
 
         <label for="subject">Subject</label>
